--- a/Scripts/all.css
+++ b/Scripts/all.css
@@ -37,6 +37,9 @@ a {
   color:#000;
   text-decoration:none;
 }
+a:hover{
+  color:#56c3ff;			/*文字色*/
+}
 /*Header部分*/
 
 
@@ -63,19 +66,20 @@ div.Header_Button{
 @media screen and (min-width:961px){/*PC用*/
   /*Header*/
   div#Header{
-    position: absolute;
-    /*position: fixed;*/
+    /*position: absolute;*/
+    position: fixed;
     margin: 0%;top:0;left: 0;
     width: 100%;  height: 10%;
     background-color: rgba(252,194,246,0.5);
     filter: drop-shadow(10px 10px 10px rgba(11,11,11,0.6));
+    z-index: 999;
   }
 
-  a.Header_title_title1{
+  p.Header_title_title1{
     font-size:200%;
     margin:0%;
   }
-  a.Header_title_title2{
+  p.Header_title_title2{
     font-size:100%;
     margin:0%;
   }
@@ -109,11 +113,11 @@ div.Header_Button{
     filter: drop-shadow(10px 10px 10px rgba(11,11,11,0.6));
     z-index: 999;
   }
-  a.Header_title_title1{
+  p.Header_title_title1{
     font-size:75%;
     margin:0%;
   }
-  a.Header_title_title2{
+  p.Header_title_title2{
     font-size:25%;
     margin:0%;
   }
